test/testdata/functions/builtin/sleep_non_number_error.lox
sleep(true); // error: expected sleep argument to be a 'number', got 'bool'
